--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-.png"> -->
     <!-- <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-.png"> -->
     <!-- <link rel="icon" type="image/x-icon" href="img/favicon.ico"> -->
-    <link rel="icon" type="image/x-icon" href="img/favicon.png">
+    <link rel="icon" type="image/x-icon" href="img/favicon.png1.png">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
