--- a/index.html
+++ b/index.html
@@ -758,7 +758,7 @@
                         class="fab fa-github"></i></a>
                 <a class="btn btn-light btn-social mr-3" href="https://www.linkedin.com/in/kusuma-priya-b97109255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
                     target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social mr-3" href="https://www.facebook.com/profile.php?id=100050619489212&mibextid=ZbWKwL"
+                <a class="btn btn-light btn-social mr-3" href="#https://www.facebook.com/profile.php?id=100050619489212&mibextid=ZbWKwL"
                     target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-light btn-social mr-3" href="https://instagram.com/kusuma._priya_?igshid=YzAwZjE1ZTI0Zg==" target="_blank"><i
                         class="fab fa-instagram"></i></a>
