--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </ul>
             <div class="row align-items-center">
                 <div class="col-lg-5 px-5 pl-lg-0 pb-5 pb-lg-0">
-                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.webp" alt="">
+                    <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/KusumaPriya1.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
